# lab-01-parser

./: .env  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  README.md  README.rst
_builds/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
_builds/Testing/Temporary/: CTestCostData.txt
_builds/_3rdParty/Hunter/: install-root-dir
_builds/_3rdParty/Hunter/toolchain/: toolchain.info  toolchain.info.NOLF
_builds/lcov/data/capture/: all_targets.info  all_targets.info.raw  template.info  tests.info  tests.info.raw
_builds/lcov/data/init/: all_targets.info  all_targets.info.raw  template.info  tests.info  tests.info.raw
_builds/lcov/html/all_targets/: index-sort-f.html  index-sort-l.html  index.html
_builds/lcov/html/all_targets/include/: Json.h.func-sort-c.html  Json.h.func.html  Json.h.gcov.html  index-sort-f.html  index-sort-l.html  index.html
_builds/lcov/html/all_targets/sources/: index-sort-f.html  index-sort-l.html  index.html  source.cpp.func-sort-c.html  source.cpp.func.html  source.cpp.gcov.html
include/: Json.h  header.hpp
scripts/: checks.sh  coverage.sh  duplication.sh  genenv.sh  tests.sh
sources/: main.cpp  source.cpp
tests/: test.cpp
